--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -145,4 +145,9 @@ html, body {
     margin: 45px 0 20px;
     font-size: 22px;
   }
+
+  ul li {
+    padding: 1rem;
+    border: 1px solid #E2E2E2;
+  }
 }
