--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -129,6 +129,11 @@ table {
   border-spacing: 0;
 }
 
+.img-fluid {
+  width: 100%;
+  height: auto;
+}
+
 // =================================
 
 html,
@@ -250,7 +255,8 @@ body {
   padding: 0 15px;
   border-radius: 999px;
   transition: all 0.3s;
-  color: white;
+  border: none;
+  color: white !important;
 
   &:hover {
     box-shadow: 0 3px 5px rgba(black, 0.3);
@@ -337,4 +343,11 @@ textarea {
 .slide-fade-leave-to {
   transform: translateX(-10px);
   opacity: 0;
+}
+
+
+.van-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
