[Fix] 商品超出頁面，無法滾動捲軸

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -45,6 +45,8 @@ table {
 html {
   // 阻止旋转屏幕时自动调整字体大小:
   -webkit-text-size-adjust: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
