--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -140,17 +140,20 @@ body {
   }
 }
 
+#fixed {
+  width: 100%;
+  padding: 1rem;
+  background: white;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
 .submit-bar {
   background: white;
   padding: 0.6rem;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  left: 0;
 
   &__text {
     -webkit-box-flex: 1;
@@ -236,7 +239,6 @@ body {
   text-align: left;
 }
 
-
 .item {
   .item-subtitle {
     // padding: 10px 16px;
@@ -249,11 +251,11 @@ body {
     line-height: 19px;
   }
   .van-sticky {
-    .submit-btn{
+    .submit-btn {
       margin-bottom: 2.5rem;
-      position: fixed;
-      bottom: 0;
-      left: 0;
+      // position: fixed;
+      // bottom: 0;
+      // left: 0;
       border-radius: 10px;
       margin: 0 auto;
       width: 100%;
