[Add] 單點飲料價格修正、調整我的訂單樣式

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -413,6 +413,19 @@ body {
 .mr-5 {
   margin-right: 8px! important;
 }
+
+.mt-5 {
+  margin-top: 10px !important;
+}
+
+.d-inline-block {
+  display: inline-block;
+}
+
+.d-block {
+  display: block;
+}
+
 input {
   // 移除原生樣式
   -webkit-appearance: none;
