修改套餐popup飲料高度位置

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -422,6 +422,13 @@ body {
   margin-top: 10px !important;
 }
 
+.mb-5 {
+  margin-bottom: 10px !important;
+}
+
+.text-left {
+  text-align: left;
+}
 .d-inline-block {
   display: inline-block;
 }
