[Fix] 調整popup CSS

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -414,6 +414,9 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
+.m-16 {
+  margin: 16px !important;
+}
 .mr-5 {
   margin-right: 8px !important;
 }
