--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -414,6 +414,9 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
+.close {
+  background: gray !important;
+}
 .m-16 {
   margin: 16px !important;
 }
